Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2017-09-03)
------------------

- Introduce IStatsCollector component and implement portal_types collector. [mathias.leimgruber]

- Rework ContenStats integration. Move "getting the content stats" from the view
  to it's own module/class.
  [mathias.leimgruber]

- Initial implementation.
  [lgraf]