@@ -13,6 +13,7 @@ import pytz
 
 
 logger = getLogger('ftw.contentstats')
+root_logger = logging.root
 
 LOG_TZ = get_localzone()
 
@@ -24,10 +25,11 @@ def setup_logger():
     """
     if not logger.handlers:
         path = get_logfile_path()
-        handler = FileHandler(path)
-        logger.addHandler(handler)
-        logger.setLevel(logging.INFO)
-        logger.propagate = False
+        if path is not None:
+            handler = FileHandler(path)
+            logger.addHandler(handler)
+            logger.setLevel(logging.INFO)
+            logger.propagate = False
     return logger
 
 
@@ -38,7 +40,18 @@ def get_logfile_path():
     have to figure out the path to var/log/ and the instance name ourselves.
     """
     zconf = getConfiguration()
-    handler_factories = zconf.eventlog.handler_factories
+    eventlog = getattr(zconf, 'eventlog', None)
+    if eventlog is None:
+        root_logger.error('')
+        root_logger.error(
+            "ftw.contentstats: Couldn't find eventlog configuration in order "
+            "to determine logfile location!")
+        root_logger.error(
+            "ftw.contentstats: No content stats logfile will be written!")
+        root_logger.error('')
+        return None
+
+    handler_factories = eventlog.handler_factories
     eventlog_path = handler_factories[0].section.path
     log_dir = dirname(eventlog_path)
     path = join(log_dir, 'contentstats-json.log')
